# PyramidASR

./: CMakeLists.txt  README.md  config.h.in  main.cpp
include/: PyramidASRService.h  PyramidASRServiceAdapter.h  SphinxDecoder.h  SphinxHelper.h
res/: ca.l5.expandingdev.Buckey.ASR.xml  ca.l5.expandingdev.PyramidASR.xml  confirm.gram  pyramid.conf.in
src/: PyramidASRService.cpp  PyramidASRServiceAdapter.cpp  SphinxDecoder.cpp  SphinxService.cpp
